# NexMind

./: .gitignore  Cargo.toml  README.md  install.sh
apps/cli/: Cargo.toml  build.rs
apps/cli/src/: main.rs
apps/daemon/: Cargo.toml  build.rs
apps/daemon/src/: commands.rs  dashboard.rs  http_api.rs  main.rs  router.rs
connectors/openclaw/: Cargo.toml
connectors/openclaw/src/: agent.rs  config.rs  gateway.rs  lib.rs  tools.rs
connectors/openclaw/tests/: live_gateway.rs
connectors/telegram/: Cargo.toml
connectors/telegram/src/: formatting.rs  lib.rs  live.rs
core/agent-comm/: Cargo.toml
core/agent-comm/src/: lib.rs
core/agent-engine/: Cargo.toml
core/agent-engine/src/: approval.rs  cost.rs  definition.rs  lib.rs  notification.rs  registry.rs  runtime.rs  state.rs  team.rs  templates.rs
core/config/: Cargo.toml
core/config/src/: lib.rs
core/connector/: Cargo.toml
core/connector/src/: lib.rs
core/event-bus/: Cargo.toml
core/event-bus/src/: lib.rs
core/memory/: Cargo.toml
core/memory/src/: lib.rs  schema.rs  store.rs  types.rs
core/model-router/: Cargo.toml
core/model-router/src/: anthropic.rs  claude_code.rs  lib.rs  ollama.rs  openai.rs  provider.rs  router.rs  types.rs
core/scheduler/: Cargo.toml
core/scheduler/src/: lib.rs
core/security/: Cargo.toml
core/security/src/: audit.rs  lib.rs  permissions.rs
core/skill-registry/: Cargo.toml
core/skill-registry/src/: lib.rs  manifest.rs  registry.rs  runner.rs
core/storage/: Cargo.toml
core/storage/src/: backup.rs  db.rs  lib.rs  migrations.rs
core/storage/src/migrations/: 001_core_schema.sql
core/tool-runtime/: Cargo.toml
core/tool-runtime/src/: lib.rs  registry.rs
core/tool-runtime/src/tools/: agent_comm.rs  browser.rs  code_exec.rs  db_query.rs  delegate.rs  email.rs  fs_list.rs  fs_read.rs  fs_write.rs  generate_tool.rs  goal_tracker.rs  http_fetch.rs  memory_read.rs  memory_write.rs  mod.rs  notify.rs  schedule_task.rs  send_message.rs  shell_exec.rs  voice.rs
core/workflow-engine/: Cargo.toml
core/workflow-engine/src/: engine.rs  lib.rs
dashboard/: index.html
data/: memory.db  memory.db-shm  memory.db-wal  nexmind.db  nexmind.db-shm  nexmind.db-wal
proto/: nexmind.proto
skills/builtin/math/: skill.yaml
skills/builtin/qr-code/: skill.yaml
skills/builtin/summarizer/: skill.yaml
skills/builtin/system-info/: skill.yaml
skills/builtin/time-utils/: skill.yaml
skills/builtin/translator/: skill.yaml
skills/builtin/weather/: skill.yaml
skills/builtin/web-search/: skill.yaml
