[package]
name = "nexmind-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexmind"
path = "src/main.rs"

[dependencies]
nexmind-scheduler = { workspace = true }
nexmind-skill-registry = { workspace = true }
serde_yaml = { workspace = true }
nexmind-agent-engine = { workspace = true }
nexmind-model-router = { workspace = true }
nexmind-tool-runtime = { workspace = true }
nexmind-storage = { workspace = true }
nexmind-event-bus = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
tokio-stream = "0.1"
rustyline = "14"

[build-dependencies]
tonic-build = { workspace = true }
