[package]
name = "nexmind-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
nexmind-storage = { workspace = true }
nexmind-security = { workspace = true }
nexmind-event-bus = { workspace = true }
nexmind-model-router = { workspace = true }
nexmind-agent-engine = { workspace = true }
nexmind-memory = { workspace = true }
nexmind-tool-runtime = { workspace = true }
nexmind-connector = { workspace = true }
nexmind-telegram = { workspace = true, features = ["live"] }
nexmind-scheduler = { workspace = true }
nexmind-skill-registry = { workspace = true }
nexmind-openclaw = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
async-trait = { workspace = true }
tokio-stream = "0.1"
axum = { workspace = true }
tower = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
