[package]
name = "nexmind-telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
nexmind-connector = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
teloxide = { version = "0.13", features = ["macros"], default-features = false, optional = true }
reqwest = { version = "0.12", features = ["json", "multipart"], default-features = false, optional = true }

[features]
default = []
live = ["teloxide", "reqwest"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
