[package]
name = "nexmind-agent-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
nexmind-storage = { workspace = true }
nexmind-event-bus = { workspace = true }
nexmind-security = { workspace = true }
nexmind-agent-comm = { workspace = true }
nexmind-model-router = { workspace = true }
nexmind-memory = { workspace = true }
nexmind-tool-runtime = { workspace = true }
nexmind-connector = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures = "0.3"
rusqlite = { workspace = true }
