[package]
name = "nexmind-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
nexmind-security = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
