[package]
name = "nexmind-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
nexmind-storage = { workspace = true }
nexmind-event-bus = { workspace = true }
nexmind-model-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
