[package]
name = "nexmind-model-router"
version = "0.1.0"
edition = "2021"

[dependencies]
nexmind-security = { workspace = true }
nexmind-event-bus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
wiremock = "0.6"
tokio-stream = "0.1"
