[package]
name = "nexmind-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
nexmind-storage = { workspace = true }
nexmind-event-bus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
ulid = { workspace = true }
cron = { workspace = true }
chrono-tz = { workspace = true }
rusqlite = { workspace = true }
