[package]
name = "nexmind-skill-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
nexmind-storage = { workspace = true }
nexmind-event-bus = { workspace = true }
nexmind-tool-runtime = { workspace = true }
nexmind-security = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
nexmind-model-router = { workspace = true }
nexmind-memory = { workspace = true }
