[package]
name = "nexmind-workflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
nexmind-agent-engine = { workspace = true }
nexmind-event-bus = { workspace = true }
nexmind-scheduler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
